# chip8_emulator

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
include/: chip8.hpp  chip8keyboard.hpp  chip8memory.hpp  chip8registers.hpp  chip8screen.hpp  chip8stack.hpp  config.hpp
src/: chip8.cpp  chip8keyboard.cpp  chip8memory.cpp  chip8screen.cpp  chip8stack.cpp  main.cpp  test.c
test/: chip8_test.cc  fixtures.hpp
